Proyecto terminado pendiente de solucionar problemas.

--- a/src/main/resources/com/mycompany/anime/secondary.fxml
+++ b/src/main/resources/com/mycompany/anime/secondary.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="rootSecondary" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.agendamusica.SecondaryController">
+<BorderPane fx:id="rootSecondary" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.anime.SecondaryController">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
